--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,6 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   http: ^0.13.5
   fluttertoast: ^8.0.9
-  # telephony: ^0.2.0
   flutter_phone_direct_caller: ^2.1.1
   image_picker: ^0.8.5+3
   firebase_storage: ^10.3.8
@@ -71,9 +70,12 @@ dependencies:
   permission_handler: ^10.2.0
   url_launcher: ^6.1.7
   downloads_path_provider_28: ^0.1.2
-  # hive: ^2.2.3
-  # latlong: ^0.6.1
-  # logo.svg
+  liquid_progress_indicator: ^0.4.0
+  weather_icons: ^3.0.0
+  intl: ^0.17.0
+  background_sms: ^0.0.4
+  geocoding: ^2.1.0
+  telephony: ^0.2.0
   
 
 
@@ -120,6 +122,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/weathericon/
     - secrets.env
 
   
