--- a/secrets.env
+++ b/secrets.env
@@ -1,3 +1,4 @@
 
 
-BASEURL =  192.168.1.5:4000  
+BASEURL = industry-4-0smartsystem.onrender.com 
+APIKEYWEATHER = dcedb1c93d8f381dce525a2b3a6e66b6 
